gallery gaps fixed

--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -6,7 +6,7 @@
 
   &__photos {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
   }
 
   &__photo {
@@ -15,7 +15,7 @@
     object-position: center;
     height: 131px;
     width: 131px;
-    flex-basis: 48%;
+    flex-basis: 49%;
     border-radius: 8px;
     transition: transform .3s linear;
 
